project y type display edits

--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -8,25 +8,13 @@
                         <li {% if not category %}class="active"{% endif %}>
                             <a href="{% url portfolio_project_list %}"
                                id="all"
-                               class="square center"
-                               title="All Projects">ALL</a></li>
+                               title="All Projects">All Projects</a></li>
                         {% for type in projecttype_list %}
                             <li {% if type.slug == category.slug %}class="active"{% endif %}>
                                 <a href="{% url portfolio_projects_by_type type.slug %}"
                                    title="{{ type.name }} Projects"
-                                   id="{{ type.slug }}"
-                                   class="project-type square center">
-                                   {{ type.alternate_title }}
-                                </a>
-                            </li>
-                        {% endfor %}
-                        {% for type in landscapetype_list %}
-                            <li {% if type.slug == category.slug %}class="active"{% endif %}>
-                                <a href="{% url portfolio_projects_by_landscape type.slug %}"
-                                   title="{{ type.name }}"
-                                   id="{{ type.slug }}"
-                                   class="landscape-type square center">
-                                   {{ type.alternate_title }}
+                                   id="{{ type.slug }}">
+                                   {{ type.name }}
                                 </a>
                             </li>
                         {% endfor %}
