--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -13,7 +13,8 @@
                             <li {% if type.slug == category.slug %}class="active"{% endif %}>
                                 <a href="{% url portfolio_projects_by_type type.slug %}"
                                    title="{{ type.name }} Projects"
-                                   id="{{ type.slug }}">
+                                   id="{{ type.slug }}"
+                                   class="tease">
                                    {{ type.name }}
                                 </a>
                             </li>
