larger people thumbnails

--- a/futuregreen/templates/people/employee_detail.html
+++ b/futuregreen/templates/people/employee_detail.html
@@ -16,7 +16,7 @@
 <aside class="third">
     <h1 class="box" style="margin: 0">Future Green Team</h1>
     {% for employee in employee_list %}
-        <article class="quarter box">
+        <article class="third box">
             <a href="{{ employee.get_absolute_url }}"><img title="{{ employee.name }}"
                  alt="{{ employee.name }}"
                  style="border: 1px solid #efefef"
