--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -18,7 +18,7 @@
                  alt="{{ employee.name }}"
                  style="border: 1px solid #efefef"
                  class="flex"
-                 src="{{ employee.thumbnail.url }}" />
+                 src="{{ employee.list.url }}" />
             </a> 
         </article>
     {%  endfor %}
