--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -675,6 +675,10 @@ body.book  .book-links  .purchase {
 }
 */
 
+.categories li{
+    line-height: 80px;
+}
+
 .categories li.active {
     background:url('images/vertical-bg.png') no-repeat 10px top,
                url('images/bottom-bg.png') no-repeat left 10px,
@@ -682,12 +686,15 @@ body.book  .book-links  .purchase {
 }
 
 .categories li a {
-    font-weight:bold;
     text-transform: uppercase;
     text-decoration: none;
     display:block;
-    padding-top:10px;
     color:#8ec42a;
+    padding: 15px 15px;
+    text-transform:uppercase;
+    font-size: 1.14285714em;
+    letter-spacing:1px;
+    color: #444;
 }
 
 /*
