--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -690,7 +690,7 @@ body.book  .book-links  .purchase {
     text-decoration: none;
     display:inline-block;
     color:#8ec42a;
-    padding: 10px  15px;
+    padding: 15px;
     /*line-height: 2;*/
     text-transform:uppercase;
     /*font-size: 1.14285714em;*/
