new typekit code

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -39,9 +39,8 @@ design.">
     {% block js_head %}
     <!-- All JavaScript at the bottom, except for Modernizr / Respond. -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
-<script type="text/javascript" 
-src="//use.typekit.net/uyl4qjv.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+<script src="https://use.typekit.net/wkg1oyw.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
 {% endblock js_head %}
 
     {% block extra_head %}
