--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -51,7 +51,7 @@ table {
 
 /********** FONTS **********/
 body {
-    font-family: "museo-sans", Helvetica, Arial, sans-serif;
+    font-family: "museo", Georgia, serif;
     font-weight:normal;
     font-size:87.5%;
     color:#444;
